--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
     <div class="container text-center mt-5">
-        <h1>Hi {{name}}</h1>
+        <h1>Hi Welcome!!</h1>
         <br>
         <div class="row-flex">
         <div class="col-8">
