--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -6,12 +6,12 @@
        <p id="description">Please Log in with registered email id:</p>
    </div>
   <div class="form-div">
-  <form id="survey-form">
+  <form id="survey-form" action="/login" method="post">
     <div class="form-elements">
         <label id="email-label">Email : </label>
-   <input type="email" id="email" placeholder="Enter your email" required/>
+   <input type="email" id="email" placeholder="Enter your email" name="email" required/>
     <label id="pass-label">Password : </label>
-        <input type="password" id="pass"  placeholder="Enter your password" required/>
+        <input type="password" id="pass"  placeholder="Enter your password" name="password" required/>
       <div class="btn-div"><button type="submit" id="submit"> Log In</button></div>
                 <hr>
       <p class="text-center">Not yet Registered ? Please goto <a href="/register">Register</a> page.</p>
