--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,8 +5,11 @@
         <br>
         <div class="row-flex">
         <div class="col-8">
-        <p>This is Dashoard</p>
+        <p>This is your Dashoard!!!</p>
         </div>
+        </div>
+        <div class="row-flex">
+            <a href="/logout"><button class="btn mr-5">Log Out</button></a>
         </div>
     </div>
 {% endblock %}
