--- a/static/main.css
+++ b/static/main.css
@@ -80,6 +80,21 @@ input,textarea{
   margin-top:8px;
   font-family:poppins;
 }
+.options{
+    width:90%;
+}
+.remove_button{
+    color:white;
+    font-size:25px;
+    margin-left:8px;
+}
+
+.remove_button:hover{
+    color:#fc3565;
+    text-decoration:none;
+}
+
+
 
 .btn-div{
   display: flex;
