--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -94,6 +94,25 @@
             Add Option
           </button>
         </div>
+        <br>
+        <div>
+            <label id="date-label">Voting Deadline : </label>
+                    <div class="deadline"><input
+            type="date"
+            id="date"
+            name="date"
+            class="date"
+            required
+                    />
+          <input
+            type="time"
+            id="time"
+            name="time"
+            class="date"
+            required
+                    />
+                      </div>
+          </div>
         <hr />
                 <div class="btn-div">
           <button
