--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
 
               <hr />
               <div class="btn-div">
-                <button type="submit" class="submit">View Polls</button>
+                <a href="dashboard/polls"><button type="submit" class="submit">View Polls</button></a>
               </div>
             </div>
           </div>
