--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,7 +34,7 @@
               <p class="text-center">Browse through your Polls.</p>
 
               <hr />
-              <div class="btn-div">
+              <div>
                 <a href="dashboard/polls"><button type="submit" class="submit">View Polls</button></a>
               </div>
             </div>
@@ -49,6 +49,8 @@
     <a href="/logout"><button class="btn mr-5">Log Out</button></a>
   </div>
   <br />
+
+
   <div id="form-modal" class="fmodal">
 
 
@@ -97,7 +99,7 @@
         <br>
         <div>
             <label id="date-label">Voting Deadline : </label>
-                    <div class="deadline"><input
+                    <div class="in-deadline"><input
             type="date"
             id="date"
             name="date"
