--- a/templates/polls.html
+++ b/templates/polls.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block body %}
+<span id="acc-info">
+    <p id="acc-info-p">URL Copied to clipboard</p>
+</span>
 <div class="container text-center mt-5">
   <h1>Hi {{name}}</h1>
   <p>List of all Polls you have created:</p>
@@ -20,9 +23,9 @@
                 <div class="ml-2 date"><span>{{end_date.strftime('%d-%m-%Y')}}</span><br><span>{{end_time}}</span></div>
             </div>
             <div class="input-group">
-<input type="text" class="poll-links" value="http://127.0.0.1:5000/polls/{{poll_id}}"/>
+<input type="text" class="poll-links" id="poll-link{{poll_id}}" value="http://127.0.0.1:5000/polls/{{poll_id}}"/>
   <div class="input-group-append btnl-div">
-    <button class="btn btn-l" type="button">Copy</button>
+    <button class="btn btn-l" type="button" onclick="myFunction({{poll_id}})">Copy</button>
   </div>
 </div>
             </div>
@@ -44,6 +47,8 @@
       </div>
 </div>
 <script>
+          $('#acc-info').hide();
+
           $(".green").click(function() {
            var a_Class = this.className;
            var a_ID = $(this).attr('data-id');
@@ -59,5 +64,16 @@
 
 
       });
+      function myFunction(p_id) {
+        var t="poll-link"+p_id;
+        var copyText = document.getElementById(t);
+
+        copyText.select();
+        copyText.setSelectionRange(0, 99999); /* For mobile devices */
+
+        document.execCommand("copy");
+          $('#acc-info').hide().delay(100).fadeIn(400);
+          $('#acc-info').delay(3000).fadeOut(400);
+}
       </script>
 {% endblock %}
